# macro-factor-decomposition

./: README.md
cdk/lib/: index.ts
cdk/lib/stacks/: dynamodb-stack.ts
src/: CMakeLists.txt  MultiVarAnalysisWorkflow.cpp
src/DataProcessors/: Backtester.cpp  Backtester.hpp  PositionSizer.cpp  PositionSizer.hpp  SignalGenerator.cpp  SignalGenerator.hpp  VaRMonitor.cpp  VaRMonitor.hpp
src/DataProviders/: IBGateway.cpp  IBGateway.hpp
test/: BacktesterUnitTest.cpp  IBGatewayUnitTest.cpp  KellyCriterionUnitTest.cpp  SignalGeneratorUnitTest.cpp  VaRMonitorUnitTest.cpp
